src/main/java/com/example/urlshortener/api/error/ErrorCode.java
package com.example.urlshortener.api.error;

public enum ErrorCode {
    INVALID_DESTINATION_URL,
    INVALID_SHORT_CODE,
    SHORT_CODE_NOT_FOUND,
    SHORT_CODE_EXPIRED,
    SHORT_CODE_DISABLED,
    DUPLICATE_CUSTOM_ALIAS,
    SHORT_CODE_GENERATION_FAILED,
    VALIDATION_FAILED,
    UNAUTHORIZED,
    RATE_LIMIT_EXCEEDED,
    URL_SAFETY_REJECTED,
    BULK_LIMIT_EXCEEDED,
    INTERNAL_ERROR
}
